aicode/mslang/tests/errors/call_non_function.ms
// Test: call non-callable value
var x = 42
x() // expect runtime error: Can only call functions and classes.
